<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_white">

        <LinearLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            tools:context=".ui.scan.ScanPreviewActivity">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="4dp"
                    android:text="@string/scan_result_title"
                    android:textColor="@color/green"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="12dp"
                    android:src="@drawable/ic_round_close" />


            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_emp_img_fixed"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:civ_border_color="@color/disable_color"
                app:civ_border_width="1dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp">

                    <TableRow android:padding="12dp">

                        <TextView
                            android:id="@+id/card_id_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/card_id_title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_card_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="MILK-00001" />


                    </TableRow>

                    <TableRow
                        android:background="@color/gray_soft"
                        android:padding=".5dp" />


                    <TableRow android:padding="12dp">

                        <TextView
                            android:id="@+id/card_owner_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/card_owner_title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_card_owner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="Arif Rahman" />

                    </TableRow>

                    <TableRow
                        android:background="@color/gray_soft"
                        android:padding=".5dp" />

                    <TableRow android:padding="12dp">

                        <TextView
                            android:id="@+id/card_unit_title"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/designation_title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_designation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="মশক কর্মী " />

                    </TableRow>

                    <TableRow
                        android:background="@color/gray_soft"
                        android:padding=".5dp" />

                    <TableRow android:padding="12dp">

                        <TextView
                            android:id="@+id/milk_amount_title"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/word_no_title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_word_no"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="0" />

                    </TableRow>

                    <TableRow
                        android:background="@color/gray_soft"
                        android:padding=".5dp" />

                    <TableRow
                        android:padding="12dp"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/card_validity_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/phone"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="01624390843" />

                    </TableRow>

                </TableLayout>


            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/img_verification_title"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/outlet_image_upload_lo_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_employee_img"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/worker_img" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_upload_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:alpha=".6"
                        android:src="@drawable/ic_add_photo" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_complete_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/btn_done" />


            <ProgressBar
                android:id="@+id/attendance_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>

</layout>