<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report.SingleRangeAttendance">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"
            app:layout_constraintEnd_toEndOf="@+id/tv_start_date"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_rectangle_round_fill"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:text="30 Aug 20" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/end_date"

            app:layout_constraintEnd_toEndOf="@+id/tv_end_date"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_rectangle_round_fill"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_start_date"
            app:layout_constraintTop_toBottomOf="@id/appCompatTextView2"
            tools:text="30 Aug 20" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/show_report"
            android:textAllCaps="false"
            app:icon="@drawable/ic_eye"
            app:layout_constraintEnd_toStartOf="@+id/btn_generate_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_generate_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/download_report"
            android:textAllCaps="false"
            app:icon="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_view_report"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />


        <LinearLayout
            android:id="@+id/item_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/light_gray"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_generate_pdf">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="Emp ID"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Emp Name"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="Present"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="Absent"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_single_attendance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title_bar"
            tools:listitem="@layout/item_view_summary_attendance" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/ic_not_found"
            android:drawablePadding="12dp"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_generate_pdf" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>