<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report.DailyAttendanceStatus">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rectangle_round_fill"
            android:padding="12dp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_generate_pdf"
            app:layout_constraintStart_toStartOf="@+id/btn_view_report"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="30 Aug 20" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/show_report"
            app:icon="@drawable/ic_eye"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/btn_generate_pdf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_generate_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/yellow_light"
            android:text="@string/download_report"
            app:icon="@drawable/ic_download"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_view_report"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

        <LinearLayout
            android:id="@+id/item_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:layout_marginTop="6dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_generate_pdf">

            <TextView
                android:id="@+id/tv_card_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="Employee Id"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_employee_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="Employee Name"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:text="Status"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_shift"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="Morning" />


            <TextView
                android:id="@+id/tv_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="01" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_daily_attendance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/status_lo"
            app:layout_constraintTop_toBottomOf="@+id/item_title_bar"
            tools:listitem="@layout/item_view_daily_attendance_report" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@drawable/ic_not_found"
            android:drawablePadding="12dp"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rv_daily_attendance"
            app:layout_constraintTop_toTopOf="@+id/rv_daily_attendance" />

        <LinearLayout
            android:id="@+id/status_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_emp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                tools:text="Total Employee: 10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_present"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/green_deep"
                android:textStyle="bold"
                tools:text="Present: " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_absent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textStyle="bold"
                tools:text="Absent: " />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>